fix galery slider

--- a/src/index.html
+++ b/src/index.html
@@ -233,107 +233,107 @@
               </article>
             </div>
           </section>
-          <section
-            class="gallery"
-            id="gallery"
-          >
-            <h2 class="page__title page__gallery">Галерея</h2>
-            <div class="gallery__wrapper">
-              <div class="gallery__slides">
-                <div
-                  id="slide-1"
-                  class="gallery__slide gallery__slide--slide-1"
-                  tabindex="1"
-                >
-                  <picture>
-                    <source
-                      media="(min-width: 1280px)"
-                      srcset="./images/gallery/desktop/galery1.png"
-                    />
-                    <img
-                      class="gallery__picture"
-                      src="./images/gallery/slider/picture1.png"
-                      alt="Picture 1"
-                    />
-                  </picture>
-                </div>
+        </div>
+        <section
+          class="gallery"
+          id="gallery"
+        >
+          <h2 class="page__title page__gallery">Галерея</h2>
 
-                <div
-                  id="slide-2"
-                  class="gallery__slide gallery__slide--slide-2"
-                  tabindex="2"
-                >
-                  <picture>
-                    <source
-                      media="(min-width: 1280px)"
-                      srcset="./images/gallery/desktop/galery2.png"
-                    />
-                    <img
-                      class="gallery__picture"
-                      src="./images/gallery/slider/picture2.png"
-                      alt="Picture 2"
-                    />
-                  </picture>
-                </div>
-
-                <div
-                  id="slide-3"
-                  class="gallery__slide gallery__slide--slide-3"
-                  tabindex="3"
-                >
-                  <picture>
-                    <source
-                      media="(min-width: 1280px)"
-                      srcset="./images/gallery/desktop/galery3.png"
-                    />
-                    <img
-                      class="gallery__picture"
-                      src="./images/gallery/slider/picture1.png"
-                      alt="Picture 3"
-                    />
-                  </picture>
-                </div>
-
-                <div
-                  id="slide-4"
-                  class="gallery__slide gallery__slide--slide-4"
-                  tabindex="4"
-                >
-                  <picture>
-                    <source
-                      media="(min-width: 1280px)"
-                      srcset="./images/gallery/desktop/galery3.png"
-                    />
-                    <img
-                      class="gallery__picture"
-                      src="./images/gallery/slider/picture4.png"
-                      alt="Picture 4"
-                    />
-                  </picture>
-                </div>
-              </div>
+          <div class="gallery__slides">
+            <div
+              id="slide-1"
+              class="gallery__slide gallery__slide--slide-1"
+              tabindex="1"
+            >
+              <picture>
+                <source
+                  media="(min-width: 1280px)"
+                  srcset="./images/gallery/desktop/galery1.png"
+                />
+                <img
+                  class="gallery__picture"
+                  src="./images/gallery/slider/picture1.png"
+                  alt="Picture 1"
+                />
+              </picture>
             </div>
-            <div class="gallery__links">
-              <a
-                href="#slide-1"
-                class="gallery__link gallery__link--slide-1"
-              ></a>
-              <a
-                href="#slide-2"
-                class="gallery__link gallery__link--slide-2"
-              ></a>
-              <a
-                href="#slide-3"
-                class="gallery__link gallery__link--slide-3"
-              ></a>
-              <a
-                href="#slide-4"
-                class="gallery__link gallery__link--slide-4"
-              ></a>
-            </div>
-          </section>
 
-          <!-- #endregion -->
+            <div
+              id="slide-2"
+              class="gallery__slide gallery__slide--slide-2"
+              tabindex="2"
+            >
+              <picture>
+                <source
+                  media="(min-width: 1280px)"
+                  srcset="./images/gallery/desktop/galery2.png"
+                />
+                <img
+                  class="gallery__picture"
+                  src="./images/gallery/slider/picture2.png"
+                  alt="Picture 2"
+                />
+              </picture>
+            </div>
+
+            <div
+              id="slide-3"
+              class="gallery__slide gallery__slide--slide-3"
+              tabindex="3"
+            >
+              <picture>
+                <source
+                  media="(min-width: 1280px)"
+                  srcset="./images/gallery/desktop/galery3.png"
+                />
+                <img
+                  class="gallery__picture"
+                  src="./images/gallery/slider/picture1.png"
+                  alt="Picture 3"
+                />
+              </picture>
+            </div>
+
+            <div
+              id="slide-4"
+              class="gallery__slide gallery__slide--slide-4"
+              tabindex="4"
+            >
+              <picture>
+                <source
+                  media="(min-width: 1280px)"
+                  srcset="./images/gallery/desktop/galery4.png"
+                />
+                <img
+                  class="gallery__picture"
+                  src="./images/gallery/slider/picture4.png"
+                  alt="Picture 4"
+                />
+              </picture>
+            </div>
+          </div>
+
+          <div class="gallery__links">
+            <a
+              href="#slide-1"
+              class="gallery__link gallery__link--slide-1"
+            ></a>
+            <a
+              href="#slide-2"
+              class="gallery__link gallery__link--slide-2"
+            ></a>
+            <a
+              href="#slide-3"
+              class="gallery__link gallery__link--slide-3"
+            ></a>
+            <a
+              href="#slide-4"
+              class="gallery__link gallery__link--slide-4"
+            ></a>
+          </div>
+        </section>
+        <div class="container">
           <section
             id="subscribe"
             class="subscribe page__subscribe"
