feat: add header & menu layout and styles

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,153 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Національний художній музей України</title>
+    <!-- <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/favicon.svg"
+    /> -->
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <!-- #region header -->
+    <header class="header page_header">
+      <div class="header__background"></div>
+      <div class="container">
+        <div class="header__content">
+          <div class="header__top">
+            <a
+              href="#menu"
+              class="icon icon--menu"
+            ></a>
+            <a
+              href="#"
+              class="logo header__logo"
+            >
+              <span>NA</span>
+              <span>MU</span>
+            </a>
+          </div>
+
+          <div class="header__bottom">
+            <h1 class="header__title">художній музей</h1>
+            <a
+              href="#menu"
+              class="header__button"
+            >
+              <span class="header__button-text">квитки</span>
+            </a>
+            <a
+              href="#"
+              class="header__events"
+            >
+              <span class="header__events-line"></span>
+              Події
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- #endregion -->
+    <!-- #region aside-->
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__content">
+          <!-- #region aside top -->
+          <div class="menu__top">
+            <a
+              href="#"
+              class="icon icon--close"
+            ></a>
+            <nav class="nav menu__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#gallery"
+                    class="nav__link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#actual-events"
+                    class="nav__link"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+              </ul>
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#subscription"
+                    class="nav__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#footer"
+                    class="nav__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <!-- #endregion -->
+          <div class="menu__underline"></div>
+          <!-- #region aside bottom -->
+          <div class="menu__bottom">
+            <div class="schedule">
+              <div class="schedule__table">
+                <p class="schedule__title">Графік роботи</p>
+                <p class="schedule__rows">
+                  <span class="schedule__strong">12:00 — 20:00</span>
+                  середа
+                  <br />
+                  <span class="schedule__strong">12:00 — 20:00</span>
+                  четвер
+                  <br />
+                  <span class="schedule__strong">12:00 — 20:00</span>
+                  п’ятниця
+                  <br />
+                  <span class="schedule__strong">11:00 — 19:00</span>
+                  субота
+                  <br />
+                  <span class="schedule__strong">11:00 — 19:00</span>
+                  неділя
+                </p>
+              </div>
+              <p class="schedule__notes">
+                <span class="schedule__strong">Вихідні:</span>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+          <!-- #endregion -->
+        </div>
+      </div>
+    </aside>
+    <!-- #endregion -->
   </body>
 </html>
