fixed the errors in the code

--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,7 @@
   </head>
 
   <body>
-  <div class="container">
-
-    <header class="header">
+    <header class="header" id="header">
       <div class="header__background">
         <p class="header__title">NA</p>
         <p class="header__title">MU</p>
@@ -74,80 +72,6 @@
           </a>
         </div>
       </div>
-
-
-      <aside
-        class="menu page__menu"
-        id="menu"
-      >
-        <div class="page__menu-top">
-          <a
-            href="#"
-            class="">
-            <img
-              class="page__menu-close-icon"
-              src="images/icon-close.png"
-              alt="Закрити меню"
-            >
-          </a>
-        </div>
-        <div class="page__menu-box">
-          <ul class="page__menu-list">
-            <li class="page__menu-item">
-              <a
-                class="page__menu-link page__menu-item-gallery"
-                href="#gallery"
-              >
-                Галерея
-              </a>
-            </li>
-            <li class="page__menu-item">
-              <a
-                class="page__menu-link page__menu-item-gallery"
-                href="#exhibition"
-              >
-                Виставки та події
-              </a>
-            </li>
-          </ul>
-          <ul class="page__menu-list">
-            <li class="page__menu-item">
-              <a
-                class="page__menu-link"
-                href="#footer"
-              >
-                Про Нас
-              </a>
-            </li>
-            <li class="page__menu-item">
-              <a
-                class="page__menu-link"
-                href="#footer"
-              >
-                Контакти
-              </a>
-            </li>
-          </ul>
-        </div>
-        <hr class="page__menu-line"></hr>
-        <div class="page__hours">
-          <div class="page__hours-box">
-            <p class="page__hours-title">Графік роботи</p>
-            <ul class="page__hours-list">
-              <li class="page__hours-item"><b>12:00 - 20:00</b> середа</li>
-              <li class="page__hours-item"><b>12:00 - 20:00</b> четвер</li>
-              <li class="page__hours-item"><b>12:00 - 20:00</b> п'ятниця</li>
-              <li class="page__hours-item"><b>11:00 - 19:00</b> субота</li>
-              <li class="page__hours-item"><b>11:00 - 19:00</b> неділя</li>
-            </ul>
-          </div>
-          <p class="page__hours-note">
-            <b>Вихідні:</b> понеділок, вівторок<br/>
-            Каса припиняє роботу за 1 годину
-            до закриття музею
-          </p>
-        </div>
-      </aside>
     </header>
 
     <aside
@@ -307,29 +231,25 @@
 
         <div class="slideshow-container">
 
-            <div class="mySlides fade">
+            <div class="mySlides fade1">
               <img class="img img-1" src="images/gallery/img-1.png" alt="#" style="width:100%">
             </div>
 
-            <div class="mySlides fade img-5">
+            <div class="mySlides fade img-6">
               <img class="img img-2" src="images/gallery/img-5.png" alt="#" style="width:100%">
             </div>
 
-            <div class="mySlides fade">
+            <div class="mySlides fade fade2">
               <img class="img img-3" src="images/gallery/img-2.png" alt="#" style="width:100%">
             </div>
 
-            <div class="mySlides fade">
+            <div class="mySlides fade fade3">
               <img class="img img-4" src="images/gallery/img-3.png" alt="#" style="width:100%">
             </div>
 
-            <div class="mySlides fade">
+            <div class="mySlides fade fade4">
               <img class="img img-5" src="images/gallery/img-4.png" alt="#" style="width:100%">
             </div>
-
-<!--          <div class="mySlides fade img-5">-->
-<!--            <img class="img img-5" src="images/gallery/img-5.png" alt="#" style="width:100%">-->
-<!--          </div>-->
         </div>
 
         <div  class="dots" style="text-align:center">
@@ -350,7 +270,6 @@
           </form>
           <span class="error-message" id="email-error"></span>
         </div>
-
       </section>
     </main>
 
@@ -412,8 +331,10 @@
             </div>
           </div>
 
-          <div class="footer__arrow" role="button" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
-            <img src="images/arrow-up.png" class="footer__arrow-img" alt="Стрілка вгору" >
+          <div class="footer__arrow">
+            <a href="#header">
+              <img src="images/arrow-up.png" class="footer__arrow-img" alt="Стрілка вгору" >
+            </a>
           </div>
 
           <hr class="footer__divider"></hr>
@@ -437,16 +358,13 @@
             </ul>
           </div>
         </div>
-
       </div>
-
 
       <div class="footer__credits">
         <p class="footer__credit-text">Designed by Zhyriada Marina</p>
         <p class="footer__credit-text">Copyright © 2019. All Rights Reserved.</p>
       </div>
     </footer>
-  </div>
 
     <script src="scripts/main.js"></script>
   </body>
