--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,290 @@
+<!-- #region head -->
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>НАМУ</title>
+    <link
+      rel="icon"
+      href="./images/favicon/cropped-national_art_museum_ukraine_logo-4-32x32.png"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <!-- #endregion -->
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <a
+            href="#menu"
+            class="header__icon icon icon--menu"
+          ></a>
+          <div class="header__top">
+            <a
+              href="#"
+              class="header__logo"
+            >
+              <div class="header__logo-text">
+                NA
+                <br />
+                MU
+              </div>
+            </a>
+          </div>
+          <div class="header__bottom">
+            <h1 class="header__second-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <div class="header__button">
+              <div class="button">
+                <div class="button__main">КВИТКИ</div>
+                <a
+                  href="#"
+                  class="button__rectangle"
+                >
+                  <div class="icon icon--arrow"></div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="menu__content">
+        <a
+          href="#"
+          class="menu__icon icon icon--close"
+        ></a>
+        <nav class="nav menu__nav">
+          <div class="nav__block">
+            <a
+              class="nav__link"
+              href="#gallery"
+            >
+              Галерея
+            </a>
+            <a
+              class="nav__link"
+              href="#events"
+            >
+              Виставки та
+              <br />
+              події
+            </a>
+          </div>
+          <div class="nav__block">
+            <a
+              class="nav__link"
+              href="#about"
+            >
+              Про нас
+            </a>
+            <a
+              class="nav__link"
+              href="#contacts"
+            >
+              Контакти
+            </a>
+          </div>
+        </nav>
+        <div class="menu__restangle"></div>
+        <div class="schesule menu__schedule">
+          <div class="schesule__week">
+            <h3 class="schesule__title">Графік роботи</h3>
+            <div class="schesule__time">
+              <span class="schesule__time--bold">12:00 — 20:00</span>
+              &nbsp;середа
+              <br />
+              <span class="schesule__time--bold">12:00 — 20:00</span>
+              &nbsp;четвер
+              <br />
+              <span class="schesule__time--bold">12:00 — 20:00</span>
+              &nbsp;п’ятниця
+              <br />
+              <span class="schesule__time--bold">11:00 — 19:00</span>
+              &nbsp;субота
+              <br />
+              <span class="schesule__time--bold">11:00 — 19:00</span>
+              &nbsp;неділя
+            </div>
+          </div>
+          <div class="schesule__weekends">
+            <span class="schesule__time--bold">Вихідні:</span>
+            понеділок, вівторок
+            <br />
+            Каса припиняє роботу за 1 годину до закриття музею
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main page__main">
+      <div class="container">
+        <div class="main__content">
+          <section
+            class="events main__events"
+            id="events"
+          >
+            <h2 class="section-title events__title">Актуальні події</h2>
+            <article class="exhibition events__exhibition">
+              <a
+                href="#"
+                class="exhibition__link"
+              >
+                <img
+                  src="./images/event1.png"
+                  alt="Картина до виставки йду і повертаюсь"
+                  class="exhibition__image"
+                />
+              </a>
+              <div class="signature exhibition__signature">
+                <div class="signature__date-block">
+                  <p class="signature__name">ВИСТАВКА</p>
+                  <p class="signature__date">26.08-29.11.2019</p>
+                </div>
+
+                <div class="signature__title-block">
+                  <h3 class="signature__title">Йду і повертаюсь</h3>
+                </div>
+
+                <p class="signature__text">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+
+            <article class="exhibition events__exhibition">
+              <a
+                href="#"
+                class="exhibition__link"
+              >
+                <img
+                  src="./images/event2.png"
+                  alt="Картина до виставки і спогади і мрії"
+                  class="exhibition__image"
+                />
+              </a>
+              <div class="signature exhibition__signature">
+                <div class="signature__date-block">
+                  <p class="signature__name">ВИСТАВКА</p>
+                  <p class="signature__date">26.08-29.11.2019</p>
+                </div>
+
+                <div class="signature__title-block">
+                  <h3 class="signature__title">І спогади і мрії</h3>
+                </div>
+
+                <p class="signature__text">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+          </section>
+        </div>
+      </div>
+
+      <article class="lecture main__lecture">
+        <img
+          src="./images/event3.png"
+          alt="Картина до лекції від класицизму до реалізму"
+          class="lecture__image"
+        />
+
+        <div class="container">
+          <div class="lecture__content">
+            <div class="lecture__signature">
+              <div class="lecture__date-block">
+                <p class="lecture__name">ЛЕКЦІЯ</p>
+                <p class="lecture__date">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="lecture__title">
+                Від класицизму до
+                <br />
+                романтизму
+              </h3>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <div class="container">
+        <section
+          class="gallery main__gallery"
+          id="gallery"
+        >
+          <h2 class="section-title gallery__title">Галерея</h2>
+
+          <div class="swiper gallery__swiper">
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">Slide 1</div>
+              <div class="swiper-slide">Slide 2</div>
+              <div class="swiper-slide">Slide 3</div>
+              ...
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+            <!-- If we need scrollbar -->
+            <div class="swiper-scrollbar"></div>
+          </div>
+        </section>
+        <!-- <section class="main__subscribe">
+            <h2 class="">Підписка</h2>
+          </section> -->
+      </div>
+    </main>
+    <footer></footer>
+    <script
+      src="scripts/main.js"
+      type="module"
+    ></script>
   </body>
 </html>
