--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en" class="page">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -10,25 +13,25 @@
       rel="icon"
       href="images/favicon.ico"
       type="image/x-icon"
-    >
+    />
     <title>Museum</title>
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
-    >
+    />
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
-      crossorigin
-    >
+      crossorigin="anonymous"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
-    >
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
-  >
+    />
     <link
       rel="stylesheet"
       href="./styles/index.css"
@@ -36,7 +39,10 @@
   </head>
 
   <body>
-    <header class="header" id="header">
+    <header
+      class="header"
+      id="header"
+    >
       <div class="header__background">
         <p class="header__title">NA</p>
         <p class="header__title">MU</p>
@@ -50,7 +56,7 @@
             class="header__burger-menu-icon"
             src="images/icon-burger-menu.png"
             alt="Відкрити меню"
-          >
+          />
         </a>
       </div>
       <div class="header__content">
@@ -63,12 +69,15 @@
           <div class="header__tickets-info-box">
             <p class="header__tickets-info">КВИТКИ</p>
           </div>
-          <a class="header__tickets-link" href="#">
+          <a
+            class="header__tickets-link"
+            href="#"
+          >
             <img
               class="header__tickets-link-img"
               src="images/keyboard_arrow_right.png"
               alt="keyboard arrow right"
-            >
+            />
           </a>
         </div>
       </div>
@@ -81,12 +90,12 @@
       <div class="page__menu-top">
         <a
           href="#"
-          class="">
+        >
           <img
             class="page__menu-close-icon"
             src="images/icon-close.png"
             alt="Закрити меню"
-          >
+          />
         </a>
       </div>
       <div class="page__menu-box">
@@ -127,55 +136,70 @@
           </li>
         </ul>
       </div>
-      <hr class="page__menu-line"></hr>
+      <hr class="page__menu-line" />
       <div class="page__hours">
         <div class="page__hours-box">
           <p class="page__hours-title">Графік роботи</p>
           <ul class="page__hours-list">
-            <li class="page__hours-item"><b>12:00 - 20:00</b> середа</li>
-            <li class="page__hours-item"><b>12:00 - 20:00</b> четвер</li>
-            <li class="page__hours-item"><b>12:00 - 20:00</b> п'ятниця</li>
-            <li class="page__hours-item"><b>11:00 - 19:00</b> субота</li>
-            <li class="page__hours-item"><b>11:00 - 19:00</b> неділя</li>
+            <li class="page__hours-item">
+              <strong>12:00 - 20:00</strong>
+              середа
+            </li>
+            <li class="page__hours-item">
+              <strong>12:00 - 20:00</strong>
+              четвер
+            </li>
+            <li class="page__hours-item">
+              <strong>12:00 - 20:00</strong>
+              п'ятниця
+            </li>
+            <li class="page__hours-item">
+              <strong>11:00 - 19:00</strong>
+              субота
+            </li>
+            <li class="page__hours-item">
+              <strong>11:00 - 19:00</strong>
+              неділя
+            </li>
           </ul>
         </div>
         <p class="page__hours-note">
-          <b>Вихідні:</b> понеділок, вівторок<br/>
-          Каса припиняє роботу за 1 годину
-          до закриття музею
+          <strong>Вихідні:</strong>
+          понеділок, вівторок
+          <br />
+          Каса припиняє роботу за 1 годину до закриття музею
         </p>
       </div>
     </aside>
 
     <main class="main">
-
-      <h1 class="current-events__title">
-        Актуальні
-        події
-      </h1>
+      <h1 class="current-events__title">Актуальні події</h1>
 
       <section
         id="exhibition"
         class="event event--exhibition"
       >
-
         <div class="event__wrapper go-and-come-back">
           <div class="event__img-box">
             <img
               class="event__img"
               src="images/go-and-come-back.png"
               alt="Йду і повертаюсь"
-            >
+            />
           </div>
           <div class="event__content">
             <div class="event__header">
               <h2 class="event__title">ВИСТАВКА</h2>
               <p class="event__dates">26.08-29.11.2019</p>
             </div>
-            <h3 class="event__name">Йду і повертаюсь <span></span></h3>
+            <h3 class="event__name">
+              Йду і повертаюсь
+              <span></span>
+            </h3>
             <p class="event__description">
-              Національний Художній Музей України презентує унікальну частину колекції
-              Градобанку - українське мистецтво другої половини 1980-1995 років.
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
             </p>
           </div>
         </div>
@@ -186,17 +210,21 @@
               class="event__img"
               src="images/memories-and-dreams.png"
               alt="Йду і повертаюсь"
-            >
+            />
           </div>
           <div class="event__content">
             <div class="event__header">
               <h2 class="event__title">ВИСТАВКА</h2>
               <p class="event__dates">26.08-29.11.2019</p>
             </div>
-            <h3 class="event__name">І спогади і мрії<span></span></h3>
+            <h3 class="event__name">
+              І спогади і мрії
+              <span></span>
+            </h3>
             <p class="event__description">
-              Національний художній музей України до 100 річчя від дня народження
-              видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
             </p>
           </div>
         </div>
@@ -211,7 +239,7 @@
             class="event__img"
             src="images/from-classicism-to-romanticism.png"
             alt="Йду і повертаюсь"
-          >
+          />
         </div>
 
         <div class="event__content">
@@ -230,53 +258,93 @@
         <h1 class="gallery__title current-events__title">Галерея</h1>
 
         <div class="slideshow-container">
+          <div class="mySlides fade1">
+            <img
+              class="img img-1"
+              src="images/gallery/img-1.png"
+              alt="#"
+            />
+          </div>
 
-            <div class="mySlides fade1">
-              <img class="img img-1" src="images/gallery/img-1.png" alt="#" style="width:100%">
-            </div>
+          <div class="mySlides fade img-6">
+            <img
+              class="img img-2"
+              src="images/gallery/img-5.png"
+              alt="#"
+            />
+          </div>
 
-            <div class="mySlides fade img-6">
-              <img class="img img-2" src="images/gallery/img-5.png" alt="#" style="width:100%">
-            </div>
+          <div class="mySlides fade fade2">
+            <img
+              class="img img-3"
+              src="images/gallery/img-2.png"
+              alt="#"
+            />
+          </div>
 
-            <div class="mySlides fade fade2">
-              <img class="img img-3" src="images/gallery/img-2.png" alt="#" style="width:100%">
-            </div>
+          <div class="mySlides fade fade3">
+            <img
+              class="img img-4"
+              src="images/gallery/img-3.png"
+              alt="#"
+            />
+          </div>
 
-            <div class="mySlides fade fade3">
-              <img class="img img-4" src="images/gallery/img-3.png" alt="#" style="width:100%">
-            </div>
-
-            <div class="mySlides fade fade4">
-              <img class="img img-5" src="images/gallery/img-4.png" alt="#" style="width:100%">
-            </div>
+          <div class="mySlides fade fade4">
+            <img
+              class="img img-5"
+              src="images/gallery/img-4.png"
+              alt="#"
+            />
+          </div>
         </div>
 
-        <div  class="dots" style="text-align:center">
+        <div class="dots">
           <span class="dot"></span>
           <span class="dot"></span>
           <span class="dot"></span>
           <span class="dot"></span>
         </div>
       </section>
-
       <section class="subscription">
         <div class="subscription__wrapper">
           <h2 class="subscription__title">Підписка</h2>
-          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
-          <form class="subscription__email-form" id="form">
-            <input type="email" name="email" class="subscription__email-input" id="email-input" placeholder="E-mail">
-            <button type="submit" class="subscription__email-btn" id="subscription__email-btn">&#10095</button>
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form
+            class="subscription__email-form"
+            id="form"
+          >
+            <input
+              type="email"
+              name="email"
+              class="subscription__email-input"
+              id="email-input"
+              placeholder="E-mail"
+            />
+            <button
+              type="submit"
+              class="subscription__email-btn"
+              id="subscription__email-btn"
+            >
+              &#10095;
+            </button>
           </form>
-          <span class="error-message" id="email-error"></span>
+          <span
+            class="error-message"
+            id="email-error"
+          ></span>
         </div>
       </section>
     </main>
-
-    <footer class="footer" id="footer">
+    <footer
+      class="footer"
+      id="footer"
+    >
       <div class="footer__content-block">
         <div class="footer__top">
-          <div class="footer__logo" >
+          <div class="footer__logo">
             <p class="footer__title">NA</p>
             <p class="footer__title">MU</p>
           </div>
@@ -287,7 +355,11 @@
                 href="https://www.facebook.com/namu.museum/"
                 target="=_blank"
               >
-                <img src="images/facebook.png" class="footer__social-icon" alt="Facebook">
+                <img
+                  src="images/facebook.png"
+                  class="footer__social-icon"
+                  alt="Facebook"
+                />
               </a>
             </div>
             <div class="footer__instagram">
@@ -296,7 +368,11 @@
                 href="https://www.instagram.com/namu.museum/"
                 target="=_blank"
               >
-                <img src="images/instagram.png" class="footer__social-icon" alt="Instagram">
+                <img
+                  src="images/instagram.png"
+                  class="footer__social-icon"
+                  alt="Instagram"
+                />
               </a>
             </div>
           </div>
@@ -307,15 +383,33 @@
             <div class="footer__block footer__block-hours">
               <p class="footer__block-title">Графік роботи</p>
               <ul class="footer__list">
-                <li class="footer__item"><b>12:00 - 20:00</b> середа</li>
-                <li class="footer__item"><b>12:00 - 20:00</b> четвер</li>
-                <li class="footer__item"><b>12:00 - 20:00</b> п'ятниця</li>
-                <li class="footer__item"><b>11:00 - 19:00</b> субота</li>
-                <li class="footer__item"><b>11:00 - 19:00</b> неділя</li>
+                <li class="footer__item">
+                  <strong>12:00 - 20:00</strong>
+                  середа
+                </li>
+                <li class="footer__item">
+                  <strong>12:00 - 20:00</strong>
+                  четвер
+                </li>
+                <li class="footer__item">
+                  <strong>12:00 - 20:00</strong>
+                  п'ятниця
+                </li>
+                <li class="footer__item">
+                  <strong>11:00 - 19:00</strong>
+                  субота
+                </li>
+                <li class="footer__item">
+                  <strong>11:00 - 19:00</strong>
+                  неділя
+                </li>
               </ul>
               <p class="footer__note">
-                <b>Вихідні:</b> понеділок, вівторок<br/>
-                Каса припиняє роботу за 1 годину<br/>
+                <strong>Вихідні:</strong>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину
+                <br />
                 до закриття музею
               </p>
             </div>
@@ -323,7 +417,9 @@
             <div class="footer__block footer__block-contacts">
               <p class="footer__block-title">Контакти</p>
               <ul class="footer__list">
-                <li class="footer__item">вул. М. Грушевського, 6; Київ, 01001</li>
+                <li class="footer__item">
+                  вул. М. Грушевського, 6; Київ, 01001
+                </li>
                 <li class="footer__item">тел. +38 (044) 278-13-57</li>
                 <li class="footer__item">факс +38 (044) 278-74-54</li>
                 <li class="footer__item">e-mail: info@namu.kiev.ua</li>
@@ -333,27 +429,51 @@
 
           <div class="footer__arrow">
             <a href="#header">
-              <img src="images/arrow-up.png" class="footer__arrow-img" alt="Стрілка вгору" >
+              <img
+                src="images/arrow-up.png"
+                class="footer__arrow-img"
+                alt="Стрілка вгору"
+              />
             </a>
           </div>
 
-          <hr class="footer__divider"></hr>
+          <hr class="footer__divider" />
 
           <div class="footer__menu">
             <ul class="footer__menu-list">
               <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#gallery">Галерея</a>
+                <a
+                  class="footer__menu-link"
+                  href="#gallery"
+                >
+                  Галерея
+                </a>
               </li>
               <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#exhibition">Виставки та події</a>
+                <a
+                  class="footer__menu-link"
+                  href="#exhibition"
+                >
+                  Виставки та події
+                </a>
               </li>
             </ul>
             <ul class="footer__menu-list">
               <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#footer">Про Нас</a>
+                <a
+                  class="footer__menu-link"
+                  href="#footer"
+                >
+                  Про Нас
+                </a>
               </li>
               <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#footer">Контакти</a>
+                <a
+                  class="footer__menu-link"
+                  href="#footer"
+                >
+                  Контакти
+                </a>
               </li>
             </ul>
           </div>
@@ -362,10 +482,11 @@
 
       <div class="footer__credits">
         <p class="footer__credit-text">Designed by Zhyriada Marina</p>
-        <p class="footer__credit-text">Copyright © 2019. All Rights Reserved.</p>
+        <p class="footer__credit-text">
+          Copyright © 2019. All Rights Reserved.
+        </p>
       </div>
     </footer>
-
     <script src="scripts/main.js"></script>
   </body>
 </html>
