--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Національний художній музей України</title>
+    <title>NAMU</title>
     <!-- <link
       rel="icon"
       type="image/x-icon"
@@ -22,7 +22,7 @@
   </head>
   <body class="page__body">
     <!-- #region header -->
-    <header class="header page_header">
+    <header class="header page__header">
       <div class="header__background"></div>
       <div class="container">
         <div class="header__content">
@@ -149,5 +149,141 @@
       </div>
     </aside>
     <!-- #endregion -->
+    <!-- #region main -->
+    <main class="main">
+      <!-- #region events-->
+      <section
+        class="actual-events main__actual-events"
+        id="events"
+      >
+        <div class="container actual-events__title-wrapper">
+          <h2 class="section-title actual-events__title">Актуальні події</h2>
+        </div>
+        <div class="actual-events__content">
+          <div class="container actual-events__container">
+            <article class="event actual-events__event">
+              <a
+                href="#"
+                class="event__link"
+              >
+                <img
+                  src="./images/gradobank.png"
+                  alt="Йду і повертаюсь"
+                  class="event__photo"
+                />
+              </a>
+              <div class="event__content-wrapper">
+                <div class="event__content">
+                  <div class="event__info">
+                    <p class="event__type">Виставка</p>
+                    <p class="event__date">26.08-29.11.2019</p>
+                  </div>
+                  <div class="event__title-wrapper">
+                    <h3 class="event__title">Йду і повертаюсь</h3>
+                    <a
+                      href="#"
+                      class="icon icon--event"
+                    ></a>
+                  </div>
+                  <p class="event__description">
+                    Національний Художній Музей України презентує унікальну
+                    частину колекції Градобанку - українське мистецтво другої
+                    половини 1980-1995 років.
+                  </p>
+                </div>
+              </div>
+            </article>
+            <article class="event actual-events__event">
+              <a
+                href="#"
+                class="event__link"
+              >
+                <img
+                  src="./images/yablonska.png"
+                  alt="І спогади і мрії"
+                  class="event__photo"
+                />
+              </a>
+              <div class="event__content-wrapper">
+                <div class="event__content">
+                  <div class="event__info">
+                    <p class="event__type">Виставка</p>
+                    <p class="event__date">26.08-29.11.2019</p>
+                  </div>
+                  <div class="event__title-wrapper">
+                    <h3 class="event__title">І спогади і мрії</h3>
+                    <a
+                      href="#"
+                      class="icon icon--event"
+                    ></a>
+                  </div>
+                  <p class="event__description">
+                    Національний художній музей України до 100 річчя від дня
+                    народження видатної української художниці Тетяни Яблонської
+                    відкриває ретроспективну ювілейну виставку «І спогади і
+                    мрії».
+                  </p>
+                </div>
+              </div>
+            </article>
+          </div>
+          <article class="event event--wide actual-events__event">
+            <a
+              href="#"
+              class="event__link event__link--wide"
+            >
+              <img
+                src="./images/classicism.png"
+                alt="Від класицизму до романтизму"
+                class="event__photo event__photo--wide"
+              />
+            </a>
+            <div class="event__content-wrapper event__content-wrapper--wide">
+              <div class="event__content event__content--wide">
+                <div class="event__info event__info--wide">
+                  <p class="event__type">Лекція</p>
+                  <p class="event__date">26/08/2019 - 11:00</p>
+                </div>
+                <h3 class="event__title event__title--wide">
+                  Від класицизму до романтизму
+                </h3>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+      <!-- #endregion -->
+      <!-- #region gallery -->
+      <div class="container">
+        <section
+          class="gallery"
+          id="gallery"
+        >
+          <h2 class="section-title">Галерея</h2>
+          <div class="gallery__content">
+            <div class="gallery__photos"></div>
+          </div>
+        </section>
+      </div>
+      <!-- #endregion -->
+      <!-- #region subscription -->
+      <section class="subscription">
+        <div class="container"></div>
+      </section>
+      <!-- #endregion -->
+      <!-- #region contact-us -->
+      <section
+        class="contact-us"
+        id="contact-us"
+      >
+        <div class="container"></div>
+      </section>
+      <!-- #endregion -->
+    </main>
+    <!-- #endregion -->
+    <footer class="footer page__footer">
+      <p>Copyright © 2019. All Rights Reserved.</p>
+      <p>Designed by Zhyriada Marina</p>
+    </footer>
   </body>
 </html>
