feat: add gallery layout & styles

--- a/src/index.html
+++ b/src/index.html
@@ -254,17 +254,103 @@
       </section>
       <!-- #endregion -->
       <!-- #region gallery -->
-      <div class="container">
-        <section
-          class="gallery"
-          id="gallery"
-        >
-          <h2 class="section-title">Галерея</h2>
-          <div class="gallery__content">
-            <div class="gallery__photos"></div>
+      <section
+        class="gallery main__gallery"
+        id="gallery"
+      >
+        <div class="container">
+          <div class="gallery__title-wrapper">
+            <h2 class="section-title gallery__title">Галерея</h2>
           </div>
-        </section>
-      </div>
+          <article class="gallery__content">
+            <div class="gallery__block">
+              <a
+                href="#"
+                class="gallery__link gallery__link--1"
+              >
+                <img
+                  src="./images/gallery/picture-1.png"
+                  alt="Картина 1"
+                  class="gallery__image"
+                />
+              </a>
+              <a
+                href="#"
+                class="gallery__link gallery__link--2"
+              >
+                <img
+                  src="./images/gallery/picture-2.png"
+                  alt="Картина 2"
+                  class="gallery__image"
+                />
+              </a>
+            </div>
+            <div class="gallery__block">
+              <a
+                href="#"
+                class="gallery__link gallery__link--3"
+              >
+                <img
+                  src="./images/gallery/picture-3.png"
+                  alt="Картина 3"
+                  class="gallery__image"
+                />
+              </a>
+              <a
+                href="#"
+                class="gallery__link gallery__link--4"
+              >
+                <img
+                  src="./images/gallery/picture-4.png"
+                  alt="Картина 4"
+                  class="gallery__image"
+                />
+              </a>
+            </div>
+          </article>
+        </div>
+
+        <article class="gallery__swiper swiper">
+          <div class="gallery__wrapper swiper-wrapper">
+            <div class="gallery__slide swiper-slide">
+              <img
+                src="./images/gallery/picture-1.png"
+                alt="Картина 1"
+                class="gallery__image gallery__image--swiper"
+              />
+            </div>
+            <div class="gallery__slide swiper-slide">
+              <img
+                src="./images/gallery/slider-2.png"
+                alt="Картина 2 Гуси"
+                class="gallery__image gallery__image--swiper"
+              />
+            </div>
+            <div class="gallery__slide swiper-slide">
+              <img
+                src="./images/gallery/picture-2.png"
+                alt="Картина 2"
+                class="gallery__image gallery__image--swiper"
+              />
+            </div>
+            <div class="gallery__slide swiper-slide">
+              <img
+                src="./images/gallery/picture-3.png"
+                alt="Картина 3"
+                class="gallery__image gallery__image--swiper"
+              />
+            </div>
+            <div class="gallery__slide swiper-slide">
+              <img
+                src="./images/gallery/picture-4.png"
+                alt="Картина 4"
+                class="gallery__image gallery__image--swiper"
+              />
+            </div>
+          </div>
+        </article>
+        <div class="swiper-pagination gallery__swiper-pagination"></div>
+      </section>
       <!-- #endregion -->
       <!-- #region subscription -->
       <section class="subscription">
@@ -285,5 +371,8 @@
       <p>Copyright © 2019. All Rights Reserved.</p>
       <p>Designed by Zhyriada Marina</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
