feat: add subscription layout & styles

--- a/src/index.html
+++ b/src/index.html
@@ -353,8 +353,33 @@
       </section>
       <!-- #endregion -->
       <!-- #region subscription -->
-      <section class="subscription">
-        <div class="container"></div>
+      <section
+        class="subscription"
+        id="subscription"
+      >
+        <div class="subscription__content">
+          <div class="subscription__text">
+            <h2 class="subscription__title section-title">Підписка</h2>
+            <p class="subscription__description">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+          </div>
+          <form
+            class="subscription__form form"
+            onsubmit="this.reset(); return false;"
+          >
+            <input
+              type="email"
+              class="form__input"
+              placeholder="E-mail"
+              required
+            />
+            <button
+              type="submit"
+              class="form__button"
+            ></button>
+          </form>
+        </div>
       </section>
       <!-- #endregion -->
       <!-- #region contact-us -->
