--- a/src/index.html
+++ b/src/index.html
@@ -250,37 +250,136 @@
         </div>
       </article>
 
-      <div class="container">
-        <section
-          class="gallery main__gallery"
-          id="gallery"
-        >
-          <h2 class="section-title gallery__title">Галерея</h2>
+      <section
+        class="gallery main__gallery"
+        id="gallery"
+      >
+        <h2 class="section-title gallery__title">Галерея</h2>
 
-          <div class="swiper gallery__swiper">
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <div class="swiper-slide">Slide 1</div>
-              <div class="swiper-slide">Slide 2</div>
-              <div class="swiper-slide">Slide 3</div>
-              ...
+        <div class="swiper my-swiper">
+          <div class="swiper-wrapper my-swiper__wrapper">
+            <div class="swiper-slide my-swiper__slide">
+              <img
+                src="../src/images/gallery 1.png"
+                alt="gallery image"
+                class="my-swiper__image"
+              />
             </div>
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-
-            <!-- If we need scrollbar -->
-            <div class="swiper-scrollbar"></div>
+            <div class="swiper-slide">
+              <img
+                src="../src/images/gallery 2.png"
+                alt="gallery image"
+                class="swiper-image"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="../src/images/gallery 3.png"
+                alt="gallery image"
+                class="swiper-image"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="../src/images/gallery 4.png"
+                alt="gallery image"
+                class="swiper-image"
+              />
+            </div>
+            <!-- <div class="swiper-slide">
+                <img
+                  src="../src/images/gallery 5.png"
+                  alt="gallery image"
+                  class="swiper-image"
+                />
+              </div> -->
           </div>
-        </section>
-        <!-- <section class="main__subscribe">
-            <h2 class="">Підписка</h2>
-          </section> -->
-      </div>
+
+          <div class="swiper-pagination"></div>
+        </div>
+
+        <div class="container gallery__desktop-wrapper">
+          <div class="gallery__content">
+            <article class="gallery__row gallery__row--high">
+              <a
+                href="#"
+                class="gallery__link gallery__link--thin"
+              >
+                <img
+                  src="/src/images/gallery 1.png"
+                  alt="image 1"
+                  class="gallery__image"
+                />
+              </a>
+              <a
+                href="#"
+                class="gallery__link gallery__link--wide"
+              >
+                <img
+                  src="/src/images/gallery 3.png"
+                  alt="image 2"
+                  class="gallery__image"
+                />
+              </a>
+            </article>
+
+            <article class="gallery__row gallery__row--low">
+              <a
+                href="#"
+                class="gallery__link gallery__link--wide"
+              >
+                <img
+                  src="/src/images/gallery 4.png"
+                  alt="image 3"
+                  class="gallery__image"
+                />
+              </a>
+              <a
+                href="#"
+                class="gallery__link gallery__link--thin"
+              >
+                <img
+                  src="/src/images/gallery 5.png"
+                  alt="image 4"
+                  class="gallery__image"
+                />
+              </a>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscribe main__subscribe">
+        <div class="container">
+          <div class="subscribe__content">
+            <div class="subscribe__text-block">
+              <h2 class="subscribe__title">Підписка</h2>
+              <p class="subscribe__text">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+            </div>
+
+            <form
+              action="#"
+              method="post"
+              class="subscribe__form"
+            >
+              <input
+                type="email"
+                placeholder="Email"
+                class="subscribe__input"
+              />
+
+              <button
+                type="submit"
+                class="subscribe__button"
+              ></button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
+
     <footer></footer>
     <script
       src="scripts/main.js"
