feat: add footer layout & styles

--- a/src/index.html
+++ b/src/index.html
@@ -120,24 +120,24 @@
               <div class="schedule__table">
                 <p class="schedule__title">Графік роботи</p>
                 <p class="schedule__rows">
-                  <span class="schedule__strong">12:00 — 20:00</span>
+                  <span class="schedule__bold">12:00 — 20:00</span>
                   середа
                   <br />
-                  <span class="schedule__strong">12:00 — 20:00</span>
+                  <span class="schedule__bold">12:00 — 20:00</span>
                   четвер
                   <br />
-                  <span class="schedule__strong">12:00 — 20:00</span>
+                  <span class="schedule__bold">12:00 — 20:00</span>
                   п’ятниця
                   <br />
-                  <span class="schedule__strong">11:00 — 19:00</span>
+                  <span class="schedule__bold">11:00 — 19:00</span>
                   субота
                   <br />
-                  <span class="schedule__strong">11:00 — 19:00</span>
+                  <span class="schedule__bold">11:00 — 19:00</span>
                   неділя
                 </p>
               </div>
               <p class="schedule__notes">
-                <span class="schedule__strong">Вихідні:</span>
+                <span class="schedule__bold">Вихідні:</span>
                 понеділок, вівторок
                 <br />
                 Каса припиняє роботу за 1 годину до закриття музею
@@ -382,19 +382,141 @@
         </div>
       </section>
       <!-- #endregion -->
-      <!-- #region contact-us -->
-      <section
-        class="contact-us"
-        id="contact-us"
-      >
-        <div class="container"></div>
-      </section>
-      <!-- #endregion -->
     </main>
     <!-- #endregion -->
-    <footer class="footer page__footer">
-      <p>Copyright © 2019. All Rights Reserved.</p>
-      <p>Designed by Zhyriada Marina</p>
+    <footer class="footer">
+      <div class="container footer__container">
+        <div class="footer__top">
+          <div class="footer__icons">
+            <a
+              href="#"
+              class="logo logo--footer"
+            >
+              <span>NA</span>
+              <span>MU</span>
+            </a>
+            <div class="footer__contact-icons">
+              <a
+                href="#"
+                class="icon icon--facebook"
+              ></a>
+              <a
+                href="#"
+                class="icon icon--instagram"
+              ></a>
+            </div>
+          </div>
+          <div class="schedule footer__schedule">
+            <div class="schedule__table">
+              <p class="schedule__title">Графік роботи</p>
+              <p class="schedule__rows">
+                <span class="schedule__bold">12:00 — 20:00</span>
+                середа
+                <br />
+                <span class="schedule__bold">12:00 — 20:00</span>
+                четвер
+                <br />
+                <span class="schedule__bold">12:00 — 20:00</span>
+                п’ятниця
+                <br />
+                <span class="schedule__bold">11:00 — 19:00</span>
+                субота
+                <br />
+                <span class="schedule__bold">11:00 — 19:00</span>
+                неділя
+              </p>
+            </div>
+            <p class="schedule__notes schedule__notes--wide">
+              <span class="schedule__bold schedule__bold--footer">
+                Вихідні:
+              </span>
+              понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+          <div class="contacts footer__contacts">
+            <p class="contacts__title">Контакти:</p>
+            <p class="contacts__text">
+              вул.
+              <a
+                href="#"
+                class="contacts__link"
+                target="_blank"
+              >
+                М. Грушевського, 6; Київ, 01001
+              </a>
+              <br />
+              тел.
+              <a
+                href="tel:+38 (044) 278-13-57"
+                class="contacts__link"
+              >
+                +38 (044) 278-13-57
+              </a>
+              <br />
+              факс
+              <a
+                href="tel:+38 (044) 278-74-54"
+                class="contacts__link"
+              >
+                +38 (044) 278-74-54
+              </a>
+              <br />
+              e-mail:
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="contacts__link"
+              >
+                info@namu.kiev.ua
+              </a>
+            </p>
+          </div>
+          <div class="footer__line"></div>
+          <ul class="footer-nav footer__nav footer__nav--1">
+            <li>
+              <a
+                href="#gallery"
+                class="footer-nav__link"
+              >
+                Галерея
+              </a>
+            </li>
+            <li>
+              <a
+                href="#actual-events"
+                class="footer-nav__link"
+              >
+                Виставки та події
+              </a>
+            </li>
+          </ul>
+          <ul class="footer-nav footer__nav footer__nav--2">
+            <li>
+              <a
+                href="#subscription"
+                class="footer-nav__link"
+              >
+                Про Нас
+              </a>
+            </li>
+            <li>
+              <a
+                href="#footer"
+                class="footer-nav__link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__bottom">
+          <p class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+          <p class="footer__copyright">Designed by Zhyriada Marina</p>
+        </div>
+      </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
