--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,26 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>NAMU</title>
-    <!-- <link
+    <link
       rel="icon"
-      type="image/x-icon"
-      href="./images/favicon.svg"
-    /> -->
+      type="image/png"
+      href="./favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./favicon/favicon.svg"
+    />
+    <link
+      rel="shortcut icon"
+      href="./favicon/favicon.ico"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon/apple-touch-icon.png"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
