--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
-      crossorigin
+      crossorigin="anonymous"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap"
@@ -39,7 +39,7 @@
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
-      crossorigin
+      crossorigin="anonymous"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&display=swap"
@@ -76,7 +76,7 @@
                   href="#"
                   class="button__rectangle"
                 >
-                  <div class="icon icon--arrow"></div>
+                  <div class="icon icon--arrow-white"></div>
                 </a>
               </div>
             </div>
@@ -260,28 +260,28 @@
           <div class="swiper-wrapper my-swiper__wrapper">
             <div class="swiper-slide my-swiper__slide">
               <img
-                src="../src/images/gallery 1.png"
+                src="./images/gallery1.png"
                 alt="gallery image"
                 class="my-swiper__image"
               />
             </div>
             <div class="swiper-slide">
               <img
-                src="../src/images/gallery 2.png"
+                src="./images/gallery2.png"
                 alt="gallery image"
                 class="swiper-image"
               />
             </div>
             <div class="swiper-slide">
               <img
-                src="../src/images/gallery 3.png"
+                src="./images/gallery3.png"
                 alt="gallery image"
                 class="swiper-image"
               />
             </div>
             <div class="swiper-slide">
               <img
-                src="../src/images/gallery 4.png"
+                src="./images/gallery4.png"
                 alt="gallery image"
                 class="swiper-image"
               />
@@ -306,7 +306,7 @@
                 class="gallery__link gallery__link--thin"
               >
                 <img
-                  src="/src/images/gallery 1.png"
+                  src="./images/gallery1.png"
                   alt="image 1"
                   class="gallery__image"
                 />
@@ -316,7 +316,7 @@
                 class="gallery__link gallery__link--wide"
               >
                 <img
-                  src="/src/images/gallery 3.png"
+                  src="./images/gallery3.png"
                   alt="image 2"
                   class="gallery__image"
                 />
@@ -329,7 +329,7 @@
                 class="gallery__link gallery__link--wide"
               >
                 <img
-                  src="/src/images/gallery 4.png"
+                  src="./images/gallery4.png"
                   alt="image 3"
                   class="gallery__image"
                 />
@@ -339,7 +339,7 @@
                 class="gallery__link gallery__link--thin"
               >
                 <img
-                  src="/src/images/gallery 5.png"
+                  src="./images/gallery5.png"
                   alt="image 4"
                   class="gallery__image"
                 />
@@ -373,14 +373,18 @@
               <button
                 type="submit"
                 class="subscribe__button"
-              ></button>
+              >
+                <div class="icon icon--arrow-black"></div>
+              </button>
             </form>
           </div>
         </div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer page__footer">
+      <div class="container"></div>
+    </footer>
     <script
       src="scripts/main.js"
       type="module"
