--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
+      media="all"
     />
     <link
       rel="stylesheet"
       href="./styles/style.scss"
+      media="all"
     />
     <link
       rel="icon shortcut"
@@ -289,12 +291,15 @@
               </p>
               <form
                 class="subscribe__form"
+                action="#"
                 onsubmit="this.reset(); return false;"
+                method="GET"
               >
                 <input
                   type="email"
                   class="subscribe__input"
                   placeholder="E-mail"
+                  name="email"
                   required
                 />
                 <button
