--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@
             <div class="relevant__content">
               <article class="relevant__event event">
                 <img
-                  src="./images/event/landscape.png"
+                  src="./images/event/landscape.webp"
                   alt="landscape"
                   class="event__img"
                 />
@@ -193,7 +193,7 @@
               </article>
               <article class="relevant__event event">
                 <img
-                  src="./images/event/girl-and-peacock.png"
+                  src="./images/event/girl-and-peacock.webp"
                   alt="girl and peacock"
                   class="event__img"
                 />
@@ -215,7 +215,7 @@
           </div>
           <article class="relevant__event event event--box">
             <img
-              src="./images/event/sunrise.png"
+              src="./images/event/sunrise.webp"
               alt="sunrise"
               class="event__img event__img--all-width"
             />
